--- a/TicketSales/src/app/signup/signup.component.html
+++ b/TicketSales/src/app/signup/signup.component.html
@@ -79,15 +79,32 @@
                 </div>
               </div>
 
+
+
+
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-outline">
+                    <select class="form-control form-control-lg" id="role" [(ngModel)]="role" name="role" required>
+                      <option value="" disabled selected>Choose role</option>
+                      <option value="event_creator">Event Creator</option>
+                      <option value="participant">Participant</option>
+                    </select>
+                    <label class="form-label" for="role">Role</label>
+                  </div>
+                </div>
+              </div>
+
+
               <div *ngIf="errorMessage" class="error-message text-danger mb-4">{{ errorMessage }}</div>
 
               <div class="mt-4 pt-2">
-                <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
+                <input class="btn btn-outline-primary" type="submit" value="Submit" />
               </div>
 
               <div class="d-flex align-items-center justify-content-center pb-4 mt-4">
                 <p class="mb-0 me-2">Already have an account?</p>
-                <button (click)="onLogin()" type="button" class="btn btn-outline-danger">Log In</button>
+                <button (click)="onLogin()" type="button" class="btn btn-outline-primary">Log In</button>
               </div>
 
             </form>
