add role and show role in home

--- a/TicketSales/src/app/home/home.component.html
+++ b/TicketSales/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<p>home works!</p>
+<div>
+    <h1>Welcome Home</h1>
+    <p>Email: {{ userEmail }}</p>
+    <p>Role: {{ userRole }}</p>
+  </div>
 <div>
     <button (click)="logOut()">Logout</button>
 </div>
