--- a/TicketSales/src/app/home/home.component.html
+++ b/TicketSales/src/app/home/home.component.html
@@ -1,8 +1,63 @@
-<div>
-    <h1>Welcome Home</h1>
-    <p>Email: {{ userEmail }}</p>
-    <p>Role: {{ userRole }}</p>
+<div class="jumbotron text-center align-items-center gradient-custom-2">
+  <h1 class="display-4">Welcome to TicketChainer</h1>
+  <p class="lead">Email: {{ userEmail }}</p>
+  <p class="lead">Role: {{ userRole }}</p>
+
+  <div *ngIf="userRole === 'event_creator'">
+    <h3 class="lead">Welcome, Event Creator! You can add and manage your events.</h3>
+    <button class="btn btn-outline-light btn-lg m-2" disabled>Buy</button>
+    <button class="btn btn-outline-light btn-lg m-2" (click)="navigateTo('add-event')">Add Event</button>
+    <button class="btn btn-outline-light btn-lg m-2" (click)="navigateTo('my-events')">Show My Events</button>
   </div>
-<div>
-    <button (click)="logOut()">Logout</button>
+
+  <div *ngIf="userRole === 'participant'">
+    <p class="lead">Welcome, Participant! You can browse and buy tickets for events.</p>
+    <button class="btn btn-outline-light btn-lg m-2" (click)="navigateTo('orders')">Buy</button>
+    <button class="btn btn-outline-light btn-lg m-2" disabled>Add Event</button>
+    <button class="btn btn-outline-light btn-lg m-2" disabled>Show My Events</button>
+  </div>
+</div>
+
+<div class="container-fluid text-center">
+  <h2>SERVICES</h2>
+  <h4 class="mb-5">What we offer</h4>
+  <div class="row">
+    <div class="col-sm-4">
+      <i class="fas fa-bolt logo-small"></i>
+      <h4>POWER</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-heart logo-small"></i>
+      <h4>LOVE</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-lock logo-small"></i>
+      <h4>JOB DONE</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <i class="fas fa-leaf logo-small"></i>
+      <h4>GREEN</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-certificate logo-small"></i>
+      <h4>CERTIFIED</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-wrench logo-small"></i>
+      <h4>HARD WORK</h4>
+      <p>Lorem ipsum dolor sit amet..</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="text-center">
+  <button class="btn btn-danger mt-3" (click)="logOut()">Logout</button>
 </div>
