--- a/TicketSales/src/app/home/home.component.html
+++ b/TicketSales/src/app/home/home.component.html
@@ -59,5 +59,5 @@
 
 
 <div class="text-center">
-  <button class="btn btn-danger mt-3" (click)="logOut()">Logout</button>
+  <button class="btn btn-primary mt-3" (click)="logOut()">Logout</button>
 </div>
