--- a/TicketSales/src/app/event-orders/event-orders.component.html
+++ b/TicketSales/src/app/event-orders/event-orders.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container mt-5">
     <h2 class="mb-4 text-center">Orders for Event ID: {{ eventId }}</h2>
     <div *ngIf="orders.length === 0" class="text-center">
