--- a/TicketSales/src/app/home/home.component.html
+++ b/TicketSales/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="jumbotron text-center align-items-center gradient-custom-2">
   <h1 class="display-4">Welcome to TicketChainer</h1>
   <p class="lead">Email: {{ userEmail }}</p>
@@ -55,7 +56,3 @@
   </div>
 </div>
 
-
-<div class="text-center">
-  <button class="btn btn-primary mt-3" (click)="logOut()">Logout</button>
-</div>
