--- a/TicketSales/src/app/orders/orders.component.html
+++ b/TicketSales/src/app/orders/orders.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container mt-5">
     <h2 class="mb-4 text-center">Available Events</h2>
     <div class="row">
