--- a/TicketSales/src/app/home/home.component.css
+++ b/TicketSales/src/app/home/home.component.css
@@ -1,131 +1,179 @@
 body {
-    font: 400 15px 'Lato', sans-serif;
-    line-height: 1.8;
-    color: #818181;
+  font: 400 15px 'Lato', sans-serif;
+  line-height: 1.8;
+  color: #818181;
+}
+
+.jumbotron {
+  background: linear-gradient(to right, #248cee, #3684d8, #3641dd, #20058d);
+  color: #ffffff;
+  padding: 100px 25px;
+  margin-bottom: 5px;
+}
+
+.main-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.container-fluid {
+  padding: 60px 50px;
+}
+
+.bg-grey {
+  background-color: #f6f6f6;
+}
+
+.logo-small {
+  color: #0a0099;
+  font-size: 50px;
+}
+
+.logo {
+  color: #0a0099;
+  font-size: 200px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  background-image: none;
+  color: #0a0099;
+}
+
+.carousel-indicators li {
+  border-color: #0a0099;
+}
+
+.carousel-indicators li.active {
+  background-color: #0a0099;
+}
+
+.item h4 {
+  font-size: 19px;
+  line-height: 1.375em;
+  font-weight: 400;
+  font-style: italic;
+  margin: 70px 0;
+}
+
+.item span {
+  font-style: normal;
+}
+
+h2 {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #303030;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+h4 {
+  font-size: 19px;
+  line-height: 1.375em;
+  color: #303030;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+.slideanim {
+  visibility: hidden;
+}
+
+.slide {
+  animation-name: slide;
+  -webkit-animation-name: slide;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  visibility: visible;
+}
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateY(70%);
   }
-  
-  .jumbotron {
-    background: linear-gradient(to right, #248cee, #3684d8, #3641dd, #20058d);
-    color: #ffffff;
-    padding: 100px 25px;
-    margin-bottom: 5px;
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
   }
-  
-  .container-fluid {
-    padding: 60px 50px;
+}
+
+@-webkit-keyframes slide {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(70%);
   }
-  
-  .bg-grey {
-    background-color: #f6f6f6;
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0%);
   }
-  
-  .logo-small {
-    color: #0a0099;
-    font-size: 50px;
-  }
-  
-  .logo {
-    color:  #0a0099;
-    font-size: 200px;
-  }
-  
-  .carousel-control-prev, .carousel-control-next {
-    background-image: none;
-    color:  #0a0099;
-  }
-  
-  .carousel-indicators li {
-    border-color:  #0a0099;
-  }
-  
-  .carousel-indicators li.active {
-    background-color: #0a0099;
-  }
-  
-  .item h4 {
-    font-size: 19px;
-    line-height: 1.375em;
-    font-weight: 400;
-    font-style: italic;
-    margin: 70px 0;
-  }
-  
-  .item span {
-    font-style: normal;
-  }
-  
-  h2 {
-    font-size: 24px;
-    text-transform: uppercase;
-    color: #303030;
-    font-weight: 600;
-    margin-bottom: 30px;
-  }
-  
-  h4 {
-    font-size: 19px;
-    line-height: 1.375em;
-    color: #303030;
-    font-weight: 400;
-    margin-bottom: 30px;
-  }
-  
-  .slideanim {visibility: hidden;}
-  .slide {
-    animation-name: slide;
-    -webkit-animation-name: slide;
-    animation-duration: 1s;
-    -webkit-animation-duration: 1s;
-    visibility: visible;
-  }
-  
-  @keyframes slide {
-    0% {
-      opacity: 0;
-      transform: translateY(70%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0%);
-    }
-  }
-  
-  @-webkit-keyframes slide {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
-    }
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
-    }
-  }
-  
-  .gradient-custom-2 {
-    background: linear-gradient(to right, #248cee, #3684d8, #3641dd, #20058d);
-    color: #fff;
-  }
-  
-  .btn-outline-light {
-    color: #fff;
-    border-color: #fff;
-  }
-  
-  .btn-outline-light:hover, .btn-outline-light:focus, .btn-outline-light:active {
-    color: #000;
-    background-color: #fff;
-    border-color: #fff;
-  }
-  
-  .text-center button {
-    margin-top: 20px;
-  }
-  
-  .mt-3 {
-    margin-top: 1rem !important;
-  }
-  
-  .mb-5 {
-    margin-bottom: 3rem !important;
-  }
-  
+}
+
+.gradient-custom-2 {
+  background: linear-gradient(to right, #248cee, #3684d8, #3641dd, #20058d);
+  color: #fff;
+}
+
+.btn-outline-light {
+  color: #fff;
+  border-color: #fff;
+}
+
+.btn-outline-light:hover,
+.btn-outline-light:focus,
+.btn-outline-light:active {
+  color: #000;
+  background-color: #fff;
+  border-color: #fff;
+}
+
+.text-center button {
+  margin-top: 20px;
+}
+
+.mt-3 {
+  margin-top: 1rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+
+.card {
+  border: none;
+  background-color: transparent;
+}
+
+.card-img-top {
+  border-radius: 10px;
+}
+
+.card-body {
+  padding: 20px;
+}
+
+.card-title {
+  color: #050964;
+  font-weight: bold;
+}
+
+.card-text {
+  color: #050964;
+}
+
+.card-text i {
+  color: #050964;
+}
+
+.btn-primary {
+  background-color: #050964;
+  border-color: #050964;
+}
+
+.btn-primary:hover {
+  background-color: #040753;
+  border-color: #040753;
+}
+
