--- a/TicketSales/src/app/login/login.component.html
+++ b/TicketSales/src/app/login/login.component.html
@@ -31,9 +31,14 @@
                   <div *ngIf="errorMessage" class="error-message text-danger mb-4">{{ errorMessage }}</div>
 
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Log in</button>
+                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit" [disabled]="loading">Log in</button>
+                    <div *ngIf="loading" class="loader"></div>
                     <!--  <a class="text-muted" href="#!">Forgot password?</a> -->
                   </div>
+
+    
+
+
 
                   <div class="d-flex align-items-center justify-content-center pb-4">
                     <p class="mb-0 me-2">Don't have an account?</p>
