--- a/TicketSales/src/app/home/home.component.css
+++ b/TicketSales/src/app/home/home.component.css
@@ -61,15 +61,18 @@ body {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 40px;
   text-transform: uppercase;
   color: #303030;
   font-weight: 600;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
+  font-family: 'Times New Roman', serif;
+  color: #050964;
+  font-weight: bold;
 }
 
 h4 {
-  font-size: 19px;
+  font-size: 25px;
   line-height: 1.375em;
   color: #303030;
   font-weight: 400;
@@ -148,6 +151,10 @@ h4 {
 
 .card-img-top {
   border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 120px;
+  height: 120px;
 }
 
 .card-body {
