--- a/TicketSales/src/app/home/home.component.html
+++ b/TicketSales/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 text-left">
-        <h1 class="display-4">Beyond ticketing... a customizable and personalized e-commerce product</h1>
+        <h1 class="display-4">Beyond ticketing....a customizable and personalized e-commerce product</h1>
         <p class="lead">Our product offers a purchase journey and a back office that allows you to manage ticketing operations.</p>
       </div>
       <div class="col-md-6 text-right">
@@ -20,44 +20,44 @@
   <div class="row">
     <div class="col-sm-3" style="background: #f5f9fe;">
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/7443/7443434.png " class="card-img-top" alt="Cross-selling" style="width: 100px; position:center ;">
+        <img src="https://cdn-icons-png.flaticon.com/512/7443/7443434.png " class="card-img-top" alt="Cross-selling" style="width: 100px">
         <div class="card-body">
           <h4 class="card-title">Cross-selling</h4>
           <p class="card-text">
-            <i class="fas fa-shield-alt"></i> Highlighting bundled offers directly in the purchase journey.
+            <i class="bi bi-shield-check"></i> Highlighting bundled offers directly in the purchase journey.
           </p>
         </div>
       </div>
     </div>
     <div class="col-sm-3" style="background: #f5f9fe;">
       <div class="card">
-        <img src="image-url-2" class="card-img-top" alt="Analytics">
+        <img src="https://cdn-icons-png.freepik.com/512/2782/2782078.png" class="card-img-top" alt="Analytics">
         <div class="card-body">
           <h4 class="card-title">Analytics</h4>
           <p class="card-text">
-            <i class="fas fa-shield-alt"></i> Implementing tracking in all our online purchase journeys and access to advanced dashboards.
+            <i class="bi bi-shield-check"></i> Implementing tracking in all our online purchase journeys and access to advanced dashboards.
           </p>
         </div>
       </div>
     </div>
     <div class="col-sm-3" style="background: #f5f9fe;">
       <div class="card">
-        <img src="image-url-3" class="card-img-top" alt="Digital Engagement">
+        <img src="https://cdn-icons-png.flaticon.com/512/13339/13339161.png" class="card-img-top" alt="Digital Engagement">
         <div class="card-body">
           <h4 class="card-title">Digital Engagement</h4>
           <p class="card-text">
-            <i class="fas fa-shield-alt"></i> Access to our ecosystem of partner solutions to optimize community engagement.
+            <i class="bi bi-shield-check"></i> Access to our ecosystem of partner solutions to optimize community engagement.
           </p>
         </div>
       </div>
     </div>
     <div class="col-sm-3" style="background: #f5f9fe;">
       <div class="card">
-        <img src="image-url-4" class="card-img-top" alt="SSO">
+        <img src="https://quicklaunch.io/wp-content/uploads/2022/09/sso-icon.png" class="card-img-top" alt="SSO">
         <div class="card-body">
           <h4 class="card-title">SSO</h4>
           <p class="card-text">
-            <i class="fas fa-shield-alt"></i> Possible interconnection with your various platforms to facilitate ticketing access.
+            <i class="bi bi-shield-check"></i> Possible interconnection with your various platforms to facilitate ticketing access.
           </p>
         </div>
       </div>
