--- a/TicketSales/src/app/login/login.component.css
+++ b/TicketSales/src/app/login/login.component.css
@@ -26,3 +26,24 @@
   color: red;
   margin-bottom: 10px;
 }
+
+
+button[disabled] {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 2s linear infinite;
+  margin: 10px auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
